moved Listeners to new file: EventListeners.js

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     </div>
 
     <script src="./src/Instructions.js"></script>
+    <script src="./src/eventListeners.js"></script>
     <script src="./src/planksApp.js"></script>
 </body>
 </html>
