--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
 
                     <div class="board-length column">
                         <label for="board-length__input">The uncut planks are</label>
-                        <input type="number" id="board-length__input" class="text-input" value="100"> <span class="cm-span">cm </span><span>long.</span>
+                        <input type="number" id="board-length__input" class="text-input" value="30"> <span class="cm-span">cm </span><span>long.</span>
+                    </div>
+
+                    <div class="plank-height">
+                        <div class="plank-height__text">The plank height is </div>
+                        <input type="text" class="plank-height__input text-input" value="5">
+                        <span class="cm-span">cm.</span>
                     </div>
                     
                     <div class="extensions" title="These options reduce planks required but increase patchwork.">
@@ -44,13 +50,20 @@
                         
                         <div class="add-cuts__measurements">
                             <div class="add-cuts__text">Cut</div>
-                            <input type="number" id="add-cut" class="add-cuts__measurements__input text-input" value="60"><span class="cm-span">cm</span>
+                            <input type="number" id="add-cut" class="add-cuts__measurements__input text-input" value="15"><span class="cm-span">cm</span>
 
                             <div class="add-cuts__measurements__repeat">
                                 <!-- <div class="repeat-text">Repeat</div> -->
-                                <input type="number" id="add-cuts__measurements__repeat__input" value="4">
+                                <input type="number" id="add-cuts__measurements__repeat__input" value="1">
                                 <span>times.</span>
                             </div>
+                        </div>
+
+                        <div class="add-cuts-subtraction">
+                            <input id="subtract-checkbox" type="checkbox" class="add-cuts-subtraction__checkbox">
+                            <div class="add-cuts-subraction__remove-text">Subtract plank height.</div>
+                            <input id="double-subtract-checkbox" class="add-cuts-subtraction__checkbox" type="checkbox">
+                            <div class="add-cuts-subtraction__checkbox-text">Twice per plank.</div>
                         </div>
 
                         <div class="add-cuts__button-container">
