--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <div class="plank-height">
                             <div class="plank-height__text"></div>
                             <input type="number" class="plank-height__input text-input" value="5">
-                            <span class="cm-span">cm</span> <span> high</span>
+                            <span class="cm-span">cm</span> <span> thick</span>
                         </div>
                     </div>
                     
@@ -62,7 +62,7 @@
 
                         <div class="add-cuts-subtraction">
                             <input id="subtract-checkbox" type="checkbox" class="add-cuts-subtraction__checkbox">
-                            <div class="add-cuts-subraction__remove-text">Subtract plank height.</div>
+                            <div class="add-cuts-subraction__remove-text">Subtract thickness.</div>
                             <input id="double-subtract-checkbox" class="add-cuts-subtraction__checkbox" type="checkbox">
                             <div class="add-cuts-subtraction__checkbox-text">Twice per plank.</div>
                         </div>
